--- a/styles/componentsStyle/contact-us/contactUs.scss
+++ b/styles/componentsStyle/contact-us/contactUs.scss
@@ -5,7 +5,7 @@
     margin-top: 0;
     background-image: url('../../../public/png/daniel-olah-dFA5XycbhoQ-unsplash\ 1\ \(2\).png');
     background-repeat: no-repeat;
-    background-position: 0 390px;
+    background-position: right 390px;
     background-size: 400px 720px;
     overflow: hidden;
 
