--- a/styles/componentsStyle/head/header.scss
+++ b/styles/componentsStyle/head/header.scss
@@ -38,18 +38,27 @@
         border-bottom: 0.5px solid #E9E9E9;
         padding-bottom: 12px;
         max-width: 560px;
+        width: 100%;
         z-index: 10;
         
 
         &__account {
-            @include button(33px, 7px, 182px, 38px);
+            @include button(25px, 7px, 162px, 38px);
+            width: 127px;
+            text-align: center;
         }
 
         &__item {
+            display: flex;
+            align-items: center;
             margin-right: 54px;
             text-decoration: none;
             color: $mainColorText;
             font-family: $FontText;
+
+            & svg {
+                margin-right: 5px;
+            }
         }
 
         &__item:hover {
@@ -121,10 +130,12 @@
 }
 
 .header-login {
-    display: block;
+    display: flex;
+    align-items: center;
     color: $mainColorText;
     font-family: $FontText;
     text-decoration: none;
+    font-size: 12px;
     z-index: 20;
 
     @include for-small-up() {
@@ -133,6 +144,10 @@
 
     @include for-e-large-up() {
         display: none;
+    }
+
+    & svg {
+        margin-right: 5px;
     }
 
     &:hover {
