--- a/styles/main.scss
+++ b/styles/main.scss
@@ -15,6 +15,11 @@
 @import './ui/scrollLine/scrollLine.scss';
 @import './componentsStyle/fqa/faq.scss';
 @import './ui/bread-crumbs/bread-crumbs.scss';
+@import './componentsStyle/mainPage/main-page-news/main-page-news.scss';
+@import './componentsStyle/mainPage/main-page-table-of-contents/main-page-table-of-contents.scss';
+@import './componentsStyle//mainPage/main-page-materials/main-page-materials.scss';
+@import './componentsStyle/mainPage/main-page-instruments/main-page-instruments.scss';
+@import './componentsStyle/mainPage/main-page-how-start/main-page-how-start.scss';
 
 body {
     padding: 0;
