--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -14,16 +14,7 @@ $origin: ( 0vw, 0vh, 0vmin );
 $rotation: ( 1, 1, 1 );
 $time: 16s;
 $colors: (
-  #7572f4,
-  #ff3e6d,
-  #ff7bb0,
-  #fff3a3,
-  #f68787,
-  #f8a978,
-  #f1eb9a,
-  #a4f6a5,
-  #eef2f5,
-  #ea168e,
-  #612570,
-  #1eafed,
+  #EFEFEF,
+  #FFFFFF,
+  #f5fcff
 );
